--- a/website/css/main.css
+++ b/website/css/main.css
@@ -1,10 +1,3 @@
-/*
-* Prefixed by https://autoprefixer.github.io
-* PostCSS: v8.4.14,
-* Autoprefixer: v10.4.7
-* Browsers: last 4 version
-*/
-
 /* 
 
 COLORS
@@ -12,10 +5,6 @@ COLORS
 primary: #FFF9F1
 secondary: #2A2619
 accent: #706C61
-
-black: #1f2220
-white: #ffffff
-gray: #dedddd
 
 BREAKPOINTS
 
@@ -41,32 +30,34 @@ BREAKPOINTS
 .home__text-small {
   font-size: 1.1rem;
   line-height: 1.5rem;
-  padding-bottom: 1rem;
-  padding-top: 0;
+  padding: 0 2rem 1.5rem 2rem;
 }
 
-.home__text-small__second {
+.home__claim__wrapper {
   font-size: 1.1rem;
   line-height: 1.5rem;
-  padding-bottom: 1.5rem;
+  padding-bottom: 2rem;
+  display: flex;
+  justify-content: center;
 }
 
 .hero-image {
   border-radius: 5px;
   width: 100%;
   height: auto;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
 }
 
 .a-way-wrapper {
   position: relative;
+  width: 2.2rem;
 }
 
 .a-way {
   position: absolute;
   top: -0.5rem;
-  right: 5.8rem;
+  right: 0.2rem;
 }
 
 .android-text {
@@ -165,17 +156,18 @@ BREAKPOINTS
   padding-bottom: 0.8rem;
 }
 
-.cta__text {
+.cta__claim__wrapper {
   font-size: 1.2rem;
   line-height: 1.5rem;
   padding-bottom: 2rem;
+  display: flex;
   color: #fff9f1;
 }
 
-.cta__a-way {
-  position: absolute;
-  top: -0.5rem;
-  right: 8.3rem;
+.cta__a-way-wrapper {
+  position: relative;
+  width: 2.5rem;
+  text-align: center;
 }
 
 .cta__button {
@@ -188,6 +180,8 @@ BREAKPOINTS
 .section-features__image {
   padding-top: 0.5rem;
   padding-bottom: 3rem;
+  width: 100%;
+  height: auto;
 }
 
 /* FAQ */
@@ -296,4 +290,82 @@ BREAKPOINTS
   line-height: 2rem;
   margin-bottom: -0.8rem;
   margin-right: -0.8rem;
+}
+
+/* COOKIES */
+
+.section-cookies {
+  padding-top: 2.5rem;
+  text-align: left;
+}
+
+.cookies__heading {
+  text-align: center;
+  margin-bottom: 0;
+}
+
+.cookies__title {
+  font-family: "Quicksand", sans-serif;
+  font-variation-settings: "wght" 700;
+  font-size: 1.1rem;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.cookies__text {
+  line-height: 1.5rem;
+  padding-bottom: 1rem;
+}
+
+.cookies__cookie-name {
+  font-variation-settings: "wght" 700;
+}
+
+.cookies__list {
+  text-align: left;
+  line-height: 1.5rem;
+  padding-bottom: 1rem;
+  list-style-type: none;
+  padding-left: 1rem;
+}
+
+.cookies__list > li {
+  padding-bottom: 1rem;
+  padding-top: 1rem;
+  display: flex;
+}
+
+.cookies__list > li > div:nth-child(1) {
+  padding-right: 1.5rem;
+  padding-top: 0.5rem;
+}
+
+.section-menu__cookies > a {
+  display: flex;
+  align-items: center;
+  margin-right: -1rem;
+  text-transform: uppercase;
+  font-size: large;
+  height: 100%;
+}
+
+.section-menu__cookies > a:active,
+.section-menu__cookies > a:hover {
+  color: #706c61;
+}
+
+.section-menu__cookies > a > div {
+  display: none;
+}
+
+.nav-arrow {
+  font-size: 2rem;
+  padding-right: 0.5rem;
+  padding-left: 0.5rem;
+}
+
+@media (min-width: 576px) {
+  .section-menu__cookies > a > div {
+    display: inline-block;
+  }
 }
