--- a/website/css/elements.css
+++ b/website/css/elements.css
@@ -170,8 +170,17 @@ h2 {
 }
 
 @media (min-width: 992px) {
+  h1 {
+    font-size: 6rem;
+    line-height: 11rem;
+  }
+
+  h2 {
+    text-align: left;
+  }
+
   .section {
-    padding: 0 5rem 0 5rem;
+    padding: 0.5rem 5rem 0 5rem;
   }
 
   .title {
@@ -187,6 +196,17 @@ h2 {
   }
 
   .logo {
-    margin-left: -3rem;
+    height: 3.8rem;
+    width: 3.8rem;
+  }
+
+  .logo-text {
+    padding-left: 1rem;
+    font-size: 1.6rem;
+  }
+
+  .logo-text__hidden {
+    visibility: visible;
+    opacity: 1;
   }
 }
