--- a/website/css/menu.css
+++ b/website/css/menu.css
@@ -194,7 +194,7 @@
 
 .section-menu__cookies > a:active,
 .section-menu__cookies > a:hover {
-  color: #ffb101;
+  color: #706c61;
 }
 
 .section-menu__cookies > a > div {
