--- a/website/css/elements.css
+++ b/website/css/elements.css
@@ -91,8 +91,8 @@ h2 {
 
 .link:hover,
 .link:focus {
-  color: #ffb101;
-  border-bottom-color: #ffb101;
+  color: #706c61;
+  border-bottom-color: #706c61;
 }
 
 .logo {
