--- a/website/css/elements.css
+++ b/website/css/elements.css
@@ -171,7 +171,7 @@ h2 {
 
 @media (min-width: 992px) {
   h1 {
-    font-size: 6rem;
+    font-size: 4rem;
     line-height: 11rem;
   }
 
@@ -211,13 +211,23 @@ h2 {
   }
 }
 
+@media (min-width: 1100px) {
+  h1 {
+    font-size: 5rem;
+  }
+}
+
 @media (min-width: 1200px) {
-  body {
-    max-width: 1600px;
-    margin: auto;
+  h1 {
+    font-size: 6rem;
+  }
+
+  .section {
+    padding: 0.5rem 15rem 0 15rem;
   }
 
   .section-menu {
-    max-width: 1600px;
+    padding-left: calc((100vw - 1600px) / 2);
+    padding-right: calc((100vw - 1600px) / 2);
   }
 }
