--- a/website/css/main.css
+++ b/website/css/main.css
@@ -658,7 +658,7 @@ BREAKPOINTS
   padding-bottom: 0.5rem;
 }
 
-.section-footer__email {
+.section-footer__email > a {
   font-variation-settings: "wght" 500;
   font-size: 1rem;
   padding-bottom: 2rem;
